--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,5 @@
 [build]
-  functions = "functions" # 서버리스 함수가 저장될 폴더를 지정합니다.
+  functions = "functions"
+# 서버리스 함수가 저장될 폴더를 지정합니다.
 
 # Netlify가 기본적으로 /functions 경로에 서버리스 함수를 두도록 설정합니다.
